--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
   <!-- Banner container -->
 <div class="banner-container">
-  <img src="https://via.placeholder.com/550x100?text=Banner+1" class="banner active" alt="Banner 1" />
-  <img src="https://via.placeholder.com/550x100?text=Banner+2" class="banner" alt="Banner 2" />
-  <img src="https://via.placeholder.com/550x100?text=Banner+3" class="banner" alt="Banner 3" />
+  <img src="/img/118-IFPA-Banner_Venom_050124.jpg" class="banner active" alt="Banner 1" />
+  <img src="/img/92-IFPA Banner_Godzilla.png" class="banner" alt="Banner 2" />
+  <img src="img/55-GOTG.png" class="banner" alt="Banner 3" />
 </div>
 
   <div class="video-container">
