--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pinball Arena Live — Pinball Live Stream, Machines & Events</title>
-  <meta name="description" content="Pinball Arena brings you live pinball streams, tournaments, and a wide catalog of modern and classic pinball machines. Join our events and shop online!">
+  <title>Pinbols.lv</title>
+  <meta name="description" content="Pinbols.lv brings you live pinball streams, tournaments, and a wide catalog of modern and classic pinball machines. Join our events and shop online!">
   <meta name="keywords" content="pinball, pinball stream, pinball arena, pinball machines, tournaments, arcade, Riga, Latvia, events, shop">
-  <meta name="author" content="Pinball Arena">
+  <meta name="author" content="Pinbols.lv">
 
   <!-- Open Graph for Social Sharing -->
-  <meta property="og:title" content="Pinball Arena Live — Pinball Live Stream & Tournaments" />
+  <meta property="og:title" content="Pinbols.lv — Pinball Live Stream & Tournaments" />
   <meta property="og:description" content="Watch our live pinball stream, browse pinball machines, join events, and shop online. Discover the pinball scene in Latvia!" />
   <meta property="og:image" content="https://pinballarena.lv/images/preview.jpg" /> <!-- Replace with your preview image -->
   <meta property="og:url" content="https://pinballarena.lv" />
@@ -164,8 +164,8 @@
 <body>
   <header>
 <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/23288abe-a59e-4db0-88d4-508ed2817800/logo-bez-fona.png?format=1500w" alt="Pinball Arena LV Logo" style="max-width: 200px; height: auto;">
-    <h1>🎮 Pinball Arena Live</h1>
-    <p>Watch our live stream and explore our world of pinball.</p>
+    <h1>🎮 Pinbols.lv</h1>
+    <p>Watch our live stream and explore our world of pinball. by PinballArena</p>
   </header>
 
   <!-- Banner container -->
