--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pinball Hub — Find & Play Pinball</title>
+  <title>Pinbols.lv — Find & Play Pinball</title>
   <meta name="description" content="Discover pinball locations, rent machines for events, and join tournaments." />
-  <meta property="og:title" content="Pinball.lv — Find & Play Pinball" />
+  <meta property="og:title" content="Pinbols.lv — Find & Play Pinball" />
   <meta property="og:description" content="Discover pinball locations, rent machines for events, and join tournaments." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/og-image.jpg" />
@@ -114,7 +114,7 @@
     <div class="container nav">
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
-        <h1>Pinball Hub</h1>
+        <h1>Pinbols.lv</h1>
       </div>
       <nav class="menu" aria-label="Primary">
         <a href="#machines">Machines</a>
@@ -152,7 +152,7 @@
         </div>
       </div>
       <div class="card" aria-label="Featured images" style="overflow:hidden">
-        <img src="https://images.unsplash.com/photo-1574359411659-2aee08dfe4c5?q=80&w=1400&auto=format&fit=crop" alt="Pinball playfield closeup"/>
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/92fb949a-ae8c-403a-a65e-0088d0a05516/tempImageGemzKF.jpg?format=1000w" alt="Pinball playfield closeup"/>
       </div>
     </div>
   </section>
@@ -162,9 +162,7 @@
     <h2>Interactive map — where to play</h2>
     <div class="map-wrap">
       <!-- Replace the src below with your own Google or Yandex map link/list -->
-      <iframe class="map" loading="lazy" allowfullscreen
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85236.77299457193!2d24.0372527!3d56.9496487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eed0c7200d6d1b%3A0x400cfcd68f2fe30!2sRiga!5e0!3m2!1sen!2slv!4v1700000000000"></iframe>
-    </div>
+     <iframe src="https://www.google.com/maps/d/embed?mid=1nG9dd7X-baDalADaJ3Wsxl82pyHADug&ehbc=2E312F" width="100%" height="480"></iframe></div>
   </section>
 
   <!-- Rentals / Available machines -->
