--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
     <div class="container hero-inner">
       <div>
         <p class="tag">Community • Tournaments • Events</p>
-        <h2 class="title">19 venues • 28 pinball machines — and counting</h2>
+        <h2 class="title">7 venues • 9 pinball machines — and counting</h2>
         <p class="subtitle">We help people find working pinball machines, host pop‑up tournaments, and bring beautiful games to festivals and private events.</p>
         <div class="cta">
           <a class="btn" href="#map">Find a place to play</a>
           <a class="btn secondary" href="#rent">Rent a machine</a>
         </div>
         <div class="stats">
-          <div class="stat"><span class="big">19</span>Locations</div>
-          <div class="stat"><span class="big">28</span>Machines</div>
+          <div class="stat"><span class="big">7</span>Locations</div>
+          <div class="stat"><span class="big">9</span>Machines</div>
           <div class="stat"><span class="big">12+</span>Events / year</div>
         </div>
       </div>
@@ -203,35 +203,33 @@
 
     <div class="grid cards">
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1596907773902-59e3dae7b81a?q=80&w=1400&auto=format&fit=crop" alt="Arcade room" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/0ddebad9-e2c7-40c0-9b77-49792ef93ce5/tempImageKRTlPp.jpg?q=80&w=1400&auto=format&fit=crop" alt="Arcade room" />
         <div class="body">
-          <strong>Arcade Zone — Main Street</strong>
+          <strong>PINBALL ARENA</strong>
           <ul>
-            <li>Elvis</li>
-            <li>The Simpsons Pinball Party</li>
-            <li>Lord of the Rings</li>
+            <li>VENOM LE</li>
+            <li>godzilla</li>
+            <li>Mandalorian</li>
           </ul>
         </div>
       </article>
       <article class="card">
         <img src="https://images.unsplash.com/photo-1594317655234-e2fa8a40a615?q=80&w=1400&auto=format&fit=crop" alt="Bar with pinball" />
         <div class="body">
-          <strong>The Pin Corner — Old Town</strong>
+          <strong>CBS</strong>
           <ul>
-            <li>World Poker Tour</li>
-            <li>Police Force</li>
-            <li>Batman</li>
+            <li>Dungeons and dragons</li>
           </ul>
         </div>
       </article>
       <article class="card">
         <img src="https://images.unsplash.com/photo-1584623004709-0c929e12c462?q=80&w=1400&auto=format&fit=crop" alt="Venue with neon lights" />
         <div class="body">
-          <strong>Neon Bar — Riverside</strong>
+          <strong>coming — soon</strong>
           <ul>
-            <li>Popeye</li>
-            <li>Harley‑Davidson (3rd ed.)</li>
-            <li>Party Zone</li>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
           </ul>
         </div>
       </article>
@@ -300,7 +298,7 @@
 
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
-      <div>© <span id="year"></span> Pinball Hub</div>
+      <div>© <span id="year"></span> Pinbols.lv</div>
       <div>Made with ❤️ for the pinball community</div>
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
