--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
       </div>
       <div class="card" aria-label="Featured images" style="overflow:hidden">
-        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/92fb949a-ae8c-403a-a65e-0088d0a05516/tempImageGemzKF.jpg?format=1000w" alt="Pinball playfield closeup"/>
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/92fb949a-ae8c-403a-a65e-0088d0a05516/tempImageGemzKF.jpg?q=80&w=1400&auto=format&fit=crop" alt="Pinball Arena"/>
       </div>
     </div>
   </section>
@@ -170,26 +170,26 @@
     <h2>Machines available for rental</h2>
     <div class="grid cards">
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1578611985321-0b07fd8cb8e2?q=80&w=1400&auto=format&fit=crop" alt="Party Zone pinball" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/c761418d-2e8a-435a-84dc-6eca8c9cfec0/MachineGodzilla_PREMIUM.format-webp.webp?q=80&w=1400&auto=format&fit=crop" alt="Godzilla" />
         <div class="body">
-          <h3>Party Zone</h3>
-          <p class="muted">Bright, fast, early‑90s classic that always draws a crowd.</p>
+          <h3>Godzilla</h3>
+          <p class="muted">Top rated on pinside - Godzilla, by Keth Elwin. Is great Pinball machine for everyone</p>
           <div class="cta"><a class="btn" href="#contact">Enquire</a></div>
         </div>
       </article>
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1620287341055-29e5816bf98b?q=80&w=1400&auto=format&fit=crop" alt="Grand Prix pinball" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/5e89d0d9-7f98-4656-804c-57cf3e65bad3/Game-Edition-PRO--DD.format-webp.webp?q=80&w=1400&auto=format&fit=crop" alt="Dungeons and Drugons" />
         <div class="body">
-          <h3>Grand Prix</h3>
-          <p class="muted">Approachable rules, quick games — great for beginners.</p>
+          <h3>Dungeons and Dragons</h3>
+          <p class="muted">Go in dungeon adventure with your 3 friends, Fight the Dragon</p>
           <div class="cta"><a class="btn" href="#contact">Enquire</a></div>
         </div>
       </article>
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1539371914693-35a46b7a53d6?q=80&w=1400&auto=format&fit=crop" alt="Elvis pinball" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/eb0ad10d-dacf-43ac-9cc2-5532a67c5069/Game-Edition-LE-Venom.format-webp.webp?q=80&w=1400&auto=format&fit=crop" alt="Venom" />
         <div class="body">
-          <h3>Elvis</h3>
-          <p class="muted">Rock‑and‑roll themed crowd‑pleaser for parties and bars.</p>
+          <h3>Venom</h3>
+          <p class="muted">Choose Your Host, Change the Game with Venom pinball machine</p>
           <div class="cta"><a class="btn" href="#contact">Enquire</a></div>
         </div>
       </article>
@@ -203,7 +203,7 @@
 
     <div class="grid cards">
       <article class="card">
-        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/0ddebad9-e2c7-40c0-9b77-49792ef93ce5/tempImageKRTlPp.jpg?q=80&w=1400&auto=format&fit=crop" alt="Arcade room" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/0ddebad9-e2c7-40c0-9b77-49792ef93ce5/tempImageKRTlPp.jpg?q=80&w=1400&auto=format&fit=crop" alt="Pinball Arena" />
         <div class="body">
           <strong>PINBALL ARENA</strong>
           <ul>
@@ -214,7 +214,7 @@
         </div>
       </article>
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1594317655234-e2fa8a40a615?q=80&w=1400&auto=format&fit=crop" alt="Bar with pinball" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/09d04780-70b5-4b4b-bbc7-f7a556eb39c9/tempImageGo0Lyq.jpg?q=80&w=1400&auto=format&fit=crop" alt="Craft Beer Station" />
         <div class="body">
           <strong>CBS</strong>
           <ul>
@@ -223,13 +223,11 @@
         </div>
       </article>
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1584623004709-0c929e12c462?q=80&w=1400&auto=format&fit=crop" alt="Venue with neon lights" />
+        <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/85aeddec-ca43-422f-ba80-85a2720e56cb/523941537_2773299732870117_2929595604922697467_n.jpg?q=80&w=1400&auto=format&fit=crop" alt="Bike Station" />
         <div class="body">
-          <strong>coming — soon</strong>
+          <strong>Bike Station</strong>
           <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li>Street Fighter II</li>
           </ul>
         </div>
       </article>
@@ -258,7 +256,7 @@
       </details>
       <details>
         <summary>Do you sell your machines?</summary>
-        <p>We focus on keeping them in public so more people can play. If you’re seeking a specific title, contact us and we’ll try to help.</p>
+        <p>We are Pinball Machine Importer and Distributor in Baltics States. You can Buy, Rent and Play our pinball machines.</p>
       </details>
     </div>
   </section>
