--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pinbols.lv — Find & Play Pinball</title>
-  <meta name="description" content="Discover pinball locations, rent machines for events, and join tournaments." />
+  <meta name="description" content="Discover pinball locations in Riga, rent machines for events, and join tournaments." />
   <meta property="og:title" content="Pinbols.lv — Find & Play Pinball" />
   <meta property="og:description" content="Discover pinball locations, rent machines for events, and join tournaments." />
   <meta property="og:type" content="website" />
@@ -280,13 +280,11 @@
         <div style="margin-top:10px" class="cta"><button class="btn" type="submit">Send message</button></div>
       </form>
       <aside class="card" style="padding:14px">
-        <h3 style="margin-top:0">Quick info</h3>
-        <p><strong>Email:</strong> hello@example.com</p>
-        <p><strong>Phone:</strong> +371 0000 0000</p>
+        <h3 style="margin-top:0">Stern Pinball Distributor in Baltics - Pinball Arena</h3>
+        <p><strong>Email:</strong> shop @ pinballarena.lvm</p>
+        <p><strong>Phone:</strong> +371 277 48 122</p>
         <p><strong>Social:</strong></p>
         <div class="social">
-          <a href="#" aria-label="Telegram">🐾 Telegram</a>
-          <a href="#" aria-label="VK">🟦 VK</a>
           <a href="#" aria-label="Instagram">📸 Instagram</a>
           <a href="#" aria-label="YouTube">▶️ YouTube</a>
         </div>
@@ -307,9 +305,9 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "Pinball Hub",
-    "url": "https://example.com",
-    "sameAs": ["https://instagram.com/yourhandle","https://youtube.com/@yourhandle"],
+    "name": "Pinbols.lv",
+    "url": "https://pinbols.lv",
+    "sameAs": ["https://instagram.com/pinballarenalv","https://youtube.com/@pinballarena"],
     "description": "Discover pinball locations, rent machines for events, and join tournaments.",
     "logo": "https://example.com/logo.png"
   }
