--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
       <article class="card">
         <img src="https://images.squarespace-cdn.com/content/v1/678e39443b804b49d1698466/0ddebad9-e2c7-40c0-9b77-49792ef93ce5/tempImageKRTlPp.jpg?q=80&w=1400&auto=format&fit=crop" alt="Pinball Arena" />
         <div class="body">
-          <strong>PINBALL ARENA</strong>
+          <strong>PINBALL ARENA - Showroom</strong>
           <ul>
             <li>VENOM LE</li>
             <li>godzilla</li>
             <li>Mandalorian</li>
+            <li>soon more...</li>
           </ul>
         </div>
       </article>
